tests/sumo/extended/vaporizer/errors/begin_missing/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Attribute 'begin' is missing in definition of a vaporizer.
Quitting (on error).
